--- a/SocialNetwork/SocialNetwork/styles/main-style.css
+++ b/SocialNetwork/SocialNetwork/styles/main-style.css
@@ -3,6 +3,10 @@
 }
 
 body {
+    background-image: url("../images/welcome-image.jpg");
+    background-repeat: repeat;
+    background-size: 300px;
+    margin: 0;
     font-family: Arial, sans-serif;
     font-size: 24px;
     color: black;
