--- a/SocialNetwork/SocialNetwork/views/main.html
+++ b/SocialNetwork/SocialNetwork/views/main.html
@@ -1,5 +1,8 @@
-﻿<div id="welcome-screen">
-    <p>Welcome To My Social Network</p>
-    <p><a href="#/login">Login</a> or <a href="#/register">Sign up</a> if you don't have an account yet</p>
-    <p>Join The Fun !!!</p>
+﻿<link href="../styles/style-welcome-screen.css" rel="stylesheet" />
+<div id="container">
+    <div id="welcome-screen">
+        <h1>Welcome To My Social Network</h1>
+        <p><a href="#/login">Login</a> or <a href="#/register">Sign up</a></p>
+        <p>To Enjoy The Fun!</p>
+    </div>
 </div>
