--- a/SocialNetwork/SocialNetwork/styles/main-style.css
+++ b/SocialNetwork/SocialNetwork/styles/main-style.css
@@ -5,9 +5,45 @@
 body {
     background-image: url("../images/welcome-image.jpg");
     background-repeat: repeat;
-    background-size: 300px;
+    background-size: 500px;
     margin: 0;
     font-family: Arial, sans-serif;
     font-size: 24px;
     color: black;
 }
+
+.form-container {
+    margin: 50px auto;
+    float: none;
+    background-color: white;
+    padding: 25px;
+    box-shadow: 10px 10px 20px black;
+    border-radius: 5px;
+}
+
+    .form-container form {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+    }
+
+        .form-container form h3 {
+            margin: 0;
+            margin-bottom: 25px;
+            font-size: 1.5em;
+            font-weight: bold;
+        }
+
+        .form-container form label {
+            display: inline-block;
+            font-weight: normal;
+            font-size: 0.9em;
+        }
+
+        .form-container form input[type=text],
+        .form-container form input[type=password] {
+            display: inline-block;
+            margin-bottom: 15px;
+        }
+
