--- a/SocialNetwork/SocialNetwork/views/header.html
+++ b/SocialNetwork/SocialNetwork/views/header.html
@@ -1,6 +1,6 @@
 ﻿<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 <link href="../styles/header.css" rel="stylesheet" />
-<div class="header col-xs-12" ng-controller="HeaderController">
+<div class="header col-xs-12" ng-controller="HeaderController" ng-cloak="">
     <div id="inner">
         <div id="navigation" class="col-sm-8 col-xs-12">
             <div class="image" ng-if="image">
