--- a/SocialNetwork/SocialNetwork/views/edit-profile.html
+++ b/SocialNetwork/SocialNetwork/views/edit-profile.html
@@ -1,4 +1,4 @@
-﻿<link href="../styles/style3.css" rel="stylesheet" />
+﻿<link href="../styles/style4.css" rel="stylesheet" />
 <div class="container col-xs-11" ng-cloak="">
     <div ng-include src="'../views/header.html'"></div>
     <div class="viewTitle col-xs-12">
@@ -7,7 +7,7 @@
     <form class="col-xs-10 col-centered clearfix" ng-submit="">
         <div id="image" class="col-md-4 col-xs-12">
             <div class="profile-image col-lg-10" ng-if="profilImage">
-                <img ng-src="profilImageData"/>
+                <img ng-src="{{ profileImageData }}" />
             </div>
             <div class="profile-image col-xs-12" ng-if="!profilImage">
                 <img src="../images/no-image.png"/>
@@ -16,8 +16,8 @@
                 <p>Allowed format: .jpg</p>
                 <p>Limit: 128kb</p>
             </div>
-            <input type="file" id="select-profile-image"/>
-            <button type="button" id="upload-profile-image">Upload</button>
+            <input onchange="angular.element(this).scope().uploadProfileImage(this)" type="file" id="select-profile-image" accept="image/jpg" />
+            <button ng-click="clickUploadProfileImage()" type="button" id="upload-profile-image">Upload</button>
         </div>
         <div id="other-info" class="col-md-7 col-xs-12">
             <label for="editName" class="col-md-4 col-xs-12">Name</label>
@@ -33,9 +33,9 @@
                 <input value="other" ng-checked="other" name="registerGender" type="radio" ng-model="registerGender" /> Other
             </div>
 
-            <input type="file" id="select-bg-image"/>
+            <input onchange="angular.element(this).scope().uploadBackgroundImage(this)" type="file" id="select-bg-image" />
             <div class="upload clearfix col-sm-4 col-xs-12">
-                <button type="button">Upload</button>
+                <button ng-click="clickUploadBackgroundImage()" type="button">Upload</button>
                 <p class="caption">Limit: 1024kb</p>
             </div>
             <div class="background-image col-sm-8 col-xs-12" ng-if="coverImage">
