Added Profile Edit

--- a/SocialNetwork/SocialNetwork/views/change-password.html
+++ b/SocialNetwork/SocialNetwork/views/change-password.html
@@ -1,6 +1,6 @@
 ﻿<link href="../styles/change-password-style.css" rel="stylesheet" />
 <div class="container col-xs-11" ng-cloak="">
-    <div ng-include src="'../views/header.html'"></div>
+    <div ng-include src="'../views/Header.html'"></div>
     <div class="viewTitle col-xs-12">
         <h2>Change Password</h2>
     </div>
