--- a/SocialNetwork/SocialNetwork/styles/header-style.css
+++ b/SocialNetwork/SocialNetwork/styles/header-style.css
@@ -26,8 +26,42 @@ img {
     height: 100%;
 }
 
-span {
+#requests-count {
+    position: absolute;
+    left: 30px;
+    top: 30px;
+    color: white;
+    background-color: red;
+    border-radius: 100px;
+    font-size: 0.8em;
+    width: 25px;
+    height: 25px;
+    padding-left: 7px;
+}
+
+#search-field {
+    background-image: url(../images/search.png);
+    /*background-position: right;*/
+    background-size: 25px;
+    background-repeat: no-repeat;
+    -moz-background-position-x: 95%;
+    -o-background-position-x: 95%;
+    background-position-x: 95%;
+    -moz-background-position-y: 50%;
+    -o-background-position-y: 50%;
+    background-position-y: 50%;
+    padding-right: 45px;
+    border: 1px solid black;
+    border-radius: 5px;
+}
+
+    #search-field:focus {
+        outline: none;
+    }
+
+#logged-user-name {
     vertical-align: top;
+    display: inline-block;
     margin-left: 5px;
     margin-right: 5px;
 }
@@ -61,6 +95,7 @@ a {
         height: 50px;
         margin-right: 7px;
         margin-bottom: 7px;
+        position: relative;
     }
 
     #menu li:hover {
