--- a/SocialNetwork/SocialNetwork/views/header.html
+++ b/SocialNetwork/SocialNetwork/views/header.html
@@ -1,6 +1,6 @@
 ﻿<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href="../styles/header.css" rel="stylesheet" />
-<div class="header col-xs-12" ng-controller="HeaderController" ng-cloak="">
+<link href="../styles/header-style.css" rel="stylesheet" />
+<div class="header col-xs-12" ng-controller="HeaderController">
     <div id="inner">
         <div id="navigation" class="col-sm-8 col-xs-12">
             <div class="image" ng-if="image">
@@ -9,7 +9,7 @@
             <div class="image" ng-if="!image">
                 <img src="../images/no-image.png" />
             </div>
-            <span><a ng-cloak href="">{{ username }}</a></span>
+            <div id="logged-user-name"><a href="">{{ username }}</a></div>
             <ul id="menu">
                 <li>
                     <span class="fa fa-comments">
@@ -18,6 +18,7 @@
                 <li>
                     <span class="fa fa-users">
                     </span>
+                    <span ng-if="hasRequests" ng-bind="requestsCount" id="requests-count"></span>
                 </li>
                 <li ng-click="editProfileView()">
                     <span class="fa fa-cogs">
@@ -34,7 +35,7 @@
             </ul>
         </div>
         <div id="search" class="col-sm-4 col-xs-12">
-            <input type="text" class="col-lg-8 col-md-10 col-xs-12" />
+            <input id="search-field" placeholder="Search..." type="text" class="col-lg-8 col-md-10 col-xs-12"/>
         </div>
     </div>
 </div>
