Added search by name Added better error messaging

--- a/SocialNetwork/SocialNetwork/views/home-page.html
+++ b/SocialNetwork/SocialNetwork/views/home-page.html
@@ -1,4 +1,4 @@
 ﻿<div class="container col-xs-11">
-    <div ng-include src="'../views/header.html'"></div>
+    <div ng-include src="'../views/heading.html'"></div>
     <p>In home page</p>
 </div>
