--- a/SocialNetwork/SocialNetwork/styles/heading.css
+++ b/SocialNetwork/SocialNetwork/styles/heading.css
@@ -26,6 +26,56 @@ img {
     height: 100%;
 }
 
+#serach-results {
+    display: none;
+    background-color: white;
+    position: absolute;
+    top: 38px;
+    z-index: 2;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    border: 1px solid black;
+    padding: 0 10px 5px 10px;
+}
+
+    #serach-results li {
+        display: block;
+        width: 100%;
+        border-bottom: 2px solid black;
+        padding: 10px 15px;
+    }
+
+        #serach-results li div.search-image {
+            display: inline-block;
+            width: 20%;
+            height: 20%;
+            margin-right: 10px;
+        }
+
+            #serach-results li div.search-image img {
+                width: 100%;
+                height: 100%;
+            }
+
+        #serach-results li div.search-name {
+            font-weight: bold;
+            font-size: 0.9em;
+        }
+
+        #results-count {
+            text-align: center;
+            padding: 5px 0 0 0 !important;
+            font-size: 0.75em;
+            font-style: italic;
+            border: none !important;
+        }
+
+            #results-count span:hover {
+                cursor: pointer;
+                text-decoration: underline;
+            }
+
 #requests-count {
     position: absolute;
     left: 30px;
@@ -41,7 +91,6 @@ img {
 
 #search-field {
     background-image: url(../images/search.png);
-    /*background-position: right;*/
     background-size: 25px;
     background-repeat: no-repeat;
     -moz-background-position-x: 95%;
@@ -53,6 +102,7 @@ img {
     padding-right: 45px;
     border: 1px solid black;
     border-radius: 5px;
+    position: relative;
 }
 
     #search-field:focus {
