--- a/SocialNetwork/SocialNetwork/views/heading.html
+++ b/SocialNetwork/SocialNetwork/views/heading.html
@@ -1,5 +1,5 @@
 ﻿<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-<link href="../styles/header-style.css" rel="stylesheet" />
+<link href="../styles/heading.css" rel="stylesheet" />
 <div class="header col-xs-12" ng-controller="HeaderController">
     <div id="inner">
         <div id="navigation" class="col-sm-8 col-xs-12">
@@ -35,7 +35,21 @@
             </ul>
         </div>
         <div id="search" class="col-sm-4 col-xs-12">
-            <input id="search-field" placeholder="Search..." type="text" class="col-lg-8 col-md-10 col-xs-12"/>
+            <input id="search-field" ng-model="searchTerm" onkeyup=" angular.element(this).scope().searchForUsers() " placeholder="Search..." type="text" class="col-lg-8 col-md-10 col-xs-12"/>
+            <ul id="serach-results" class="col-lg-8 col-md-10 col-xs-12">
+                <li ng-repeat="person in searchResults">
+                    <div class="search-image" ng-if="person.profileImageData != null">
+                        <img ng-src="{{ person.profileImageData }}"/>
+                    </div>
+                    <div class="search-image" ng-if="person.profileImageData == null">
+                        <img src="../images/no-image.png"/>
+                    </div>
+                    <span class="search-name">{{ person.name }}</span>
+                </li>
+                <li id="results-count">
+                    <span>{{ resultsCount }} results total</span>
+                </li>
+            </ul>
         </div>
     </div>
 </div>
