--- a/SocialNetwork/SocialNetwork/styles/heading-style.css
+++ b/SocialNetwork/SocialNetwork/styles/heading-style.css
@@ -11,6 +11,7 @@
 #navigation {
     display: inline-block;
     padding: 0;
+    position: relative;
 }
 
 .image {
@@ -31,6 +32,7 @@ img {
     background-color: white;
     position: absolute;
     top: 38px;
+    right: 0;
     z-index: 2;
     padding: 0;
     margin: 0;
@@ -45,6 +47,11 @@ img {
         border-bottom: 2px solid black;
         padding: 10px 15px;
     }
+
+        #serach-results li:hover {
+            cursor: pointer;
+            background-color: #F5F5F5;
+        }
 
         #serach-results li div.search-image {
             display: inline-block;
@@ -162,4 +169,93 @@ a {
 
 #search input {
     float: right;
+    margin-bottom: 10px;
+}
+
+#friend-requests {
+    background-color: white;
+    position: absolute;
+    top: 55px;
+    left: 196px;
+    z-index: 2;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    border: 1px solid black;
+    padding: 0 10px 5px 10px;
+    margin-bottom: 10px;
+}   
+
+#friend-requests li {
+        display: block;
+        width: 100%;
+        border-bottom: 2px solid black;
+        padding: 10px 15px;
+    }
+
+        #friend-requests li:hover {
+            cursor: pointer;
+            background-color: #F5F5F5;
+        }
+
+        #friend-requests li div.request-image {
+            display: inline-block;
+            width: 25%;
+            margin-right: 10px;
+            vertical-align: top;
+        }
+
+            #friend-requests li div.request-image img {
+                width: 100%;
+                height: 100%;
+            }
+
+        #friend-requests li div.request-name {
+            font-weight: bold;
+            font-size: 0.9em;
+        }
+
+        #requests-total {
+            text-align: center;
+            padding: 5px 0 0 0 !important;
+            font-size: 0.75em;
+            font-style: italic;
+            border: none !important;
+        }
+
+            #requests-total span:hover {
+                cursor: pointer;
+                text-decoration: underline;
+            }
+
+#name-and-buttons {
+    display: inline-block;
+}
+
+    #name-and-buttons span {
+        display: block;
+    }
+
+    #name-and-buttons input.button-request {
+        width: 75px;
+        height: 30px;
+        font-size: 0.8em;
+        margin-right: 10px;
+        background-color: #9DC3E6;
+        border: 1px solid black;
+        color: black;
+    }
+
+@media (max-width: 770px) {
+    #friend-requests {
+        left: 0;
+    }
+}
+
+@media (max-width: 540px) {
+    #friend-requests {
+        position: relative;
+        top: 0;
+        left: 0;
+    }
 }
