--- a/SocialNetwork/SocialNetwork/styles/main-style.css
+++ b/SocialNetwork/SocialNetwork/styles/main-style.css
@@ -68,6 +68,7 @@ body {
     margin-bottom: 15px;
     margin-top: 15px;
     padding: 20px 0 20px 0;
+    /*height: 80px;*/
 }
 
     .viewTitle h2 {
