--- a/SocialNetwork/SocialNetwork/views/edit-profile.html
+++ b/SocialNetwork/SocialNetwork/views/edit-profile.html
@@ -1,6 +1,6 @@
 ﻿<link href="../styles/edit-style.css" rel="stylesheet" />
 <div class="container col-xs-11" ng-cloak="">
-    <div ng-include src="'../views/heading.html'"></div>
+    <div ng-include src="'../views/header.html'"></div>
     <div class="viewTitle col-xs-12">
         <h2>Edit Profile</h2>
     </div>
