--- a/SocialNetwork/SocialNetwork/views/user-profile.html
+++ b/SocialNetwork/SocialNetwork/views/user-profile.html
@@ -1,6 +1,6 @@
 ﻿<link href="../styles/user-style.css" rel="stylesheet" />
 <div class="container col-xs-11" ng-cloak="">
-    <div ng-include src="'../views/heading.html'"></div>
+    <div ng-include src="'../views/header.html'"></div>
     <div class="user-bg-image col-xs-12">
         <img ng-if="user.coverImageData != null" ng-src="{{ user.coverImageData }}"/>
         <img ng-if="user.coverImageData == null" src="../images/default-bg-user-image.jpg" />
