--- a/SocialNetwork/SocialNetwork/views/home-page.html
+++ b/SocialNetwork/SocialNetwork/views/home-page.html
@@ -77,9 +77,31 @@
                                 <div class="comment-author-info">
                                     <span class="comment-author-name">{{ comment.author.name }}</span>
                                     <span class="comment-date">{{ comment.date | date : 'd MMM yyyy HH:mm:ss' : '+03' }}</span>
+                                    <div class="edit-delete-comment-btns">
+                                        <input ng-click="$parent.commentDeleteMode=true" class="edit-delete-comment" ng-if="(post.author.username == myUsername || comment.author.username == myUsername) && !commentDeleteMode && !commentEditMode" type="button" value="Delete" />
+                                        <input ng-click="$parent.commentEditMode=true; $parent.commentText=comment.commentContent" class="edit-delete-comment" ng-if="comment.author.username == myUsername && !commentDeleteMode && !commentEditMode" type="button" value="Edit" />
+                                        <input disabled="disabled" class="edit-delete-comment" ng-if="(post.author.username == myUsername || comment.author.username == myUsername) && (commentDeleteMode || commentEditMode)" type="button" value="Delete" />
+                                        <input disabled="disabled" class="edit-delete-comment" ng-if="comment.author.username == myUsername && (commentDeleteMode || commentEditMode)" type="button" value="Edit" />
+                                    </div>
                                 </div>
                                 <div class="comment-content">
-                                    <p>{{ comment.commentContent }}</p>
+                                    <p ng-hide="commentDeleteMode || commentEditMode">{{ comment.commentContent }}</p>
+                                    <div ng-show="commentDeleteMode" class="col-xs-12 delete-comment">
+                                        <textarea disabled placeholder="{{ comment.commentContent }}"></textarea>
+                                        <div class="question">
+                                            <span>Delete Comment?</span>
+                                            <input ng-click="deleteComment(post.id, comment.id)" type="button" value="Yes" />
+                                            <input ng-click="commentDeleteMode=false" type="button" value="No" />
+                                        </div>
+                                    </div>
+                                    <div ng-show="commentEditMode" class="col-xs-12 edit-comment">
+                                        <textarea ng-model="commentText"></textarea>
+                                        <div class="question">
+                                            <span>Save Changes?</span>
+                                            <input ng-click="editComment(post.id, comment.id, commentText)" type="button" value="Yes" />
+                                            <input ng-click="commentEditMode=false" type="button" value="No" />
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="comment-buttons">
                                     <span class="like-comment" ng-if="!comment.liked">{{ comment.likesCount }} <img src="../images/like_icon.png" /></span>
