--- a/SocialNetwork/SocialNetwork/views/home-page.html
+++ b/SocialNetwork/SocialNetwork/views/home-page.html
@@ -1,4 +1,4 @@
-﻿<link href="../styles/home-style.css" rel="stylesheet" />
+﻿<link href="../styles/home-style.css" rel="stylesheet"/>
 <div class="container col-xs-11">
     <div ng-include src="'../views/heading.html'"></div>
     <div class="viewTitle col-xs-12 clearfix">
@@ -6,16 +6,16 @@
             News Feed <span id="news-feed-icon" class="fa fa-comments"></span>
         </h2>
     </div>
-    <div id="news-feed" class="col-lg-8 col-sm-7 col-xs-12">
+    <div infinite-scroll="getNewsFeed()" infinite-scroll-disabled='standby' nfinite-scroll-distance="0" id="news-feed" class="col-lg-8 col-sm-7 col-xs-12">
         <ul id="news-feed-posts" class="col-lg-8 col-md-10 col-xs-12">
             <li class="col-xs-12 news-feed-post" ng-repeat="post in newsFeedPosts">
-                <div class="post">
+                <div class="post" ng-init="getAllPostComments(post)">
                     <div class="post-user-data">
                         <div ng-if="post.author.profileImageData != null" class="post-user-image">
-                            <img ng-src="{{ post.author.profileImageData }}"/>
+                            <img ng-src="{{ post.author.profileImageData }}" />
                         </div>
                         <div ng-if="post.author.profileImageData == null" class="post-user-image">
-                            <img src="../images/no-image.png"/>
+                            <img src="../images/no-image.png" />
                         </div>
                         <div class="post-info">
                             <p class="post-author-name">{{ post.author.name }}</p>
@@ -32,15 +32,15 @@
                             <textarea disabled placeholder="{{ post.postContent }}"></textarea>
                             <div class="question">
                                 <span>Delete Post?</span>
-                                <input ng-click="deletePost(post.id)" type="button" value="Yes" />
-                                <input ng-click="deleteMode=false" type="button" value="No"/>
+                                <input ng-click="deletePost(post)" type="button" value="Yes" />
+                                <input ng-click="deleteMode=false" type="button" value="No" />
                             </div>
                         </div>
                         <div ng-show="editMode" class="col-xs-12 edit-post">
                             <textarea ng-model="postText"></textarea>
                             <div class="question">
                                 <span>Save Changes?</span>
-                                <input ng-click="editPost(post.id, postText)" type="button" value="Yes" />
+                                <input ng-click="editPost(post, postText); editMode=false" type="button" value="Yes" />
                                 <input ng-click="editMode=false" type="button" value="No" />
                             </div>
                         </div>
@@ -48,9 +48,9 @@
                     <div class="post-buttons">
                         <div class="button-group">
                             <span ng-if="!post.liked">{{ post.likesCount }} <img src="../images/like_icon.png" /></span>
-                            <span ng-click="likePost(post.id)" ng-if="!post.liked" class="like-unlike">Like</span>
+                            <span ng-click="likePost(post)" ng-if="!post.liked" class="like-unlike">Like</span>
                             <span ng-if="post.liked">{{ post.likesCount }} <img src="../images/unlike_icon.png" /></span>
-                            <span ng-click="unlikePost(post.id)" ng-if="post.liked" class="like-unlike">Unlike</span>
+                            <span ng-click="unlikePost(post)" ng-if="post.liked" class="like-unlike">Unlike</span>
                         </div>
                         <div class="button-group">
                             <span>{{ post.comments.length }} <img src="../images/comment-balloon.jpg" /></span>
@@ -62,26 +62,26 @@
                 </div>
                 <div ng-show="show" class="col-xs-10 add-comment">
                     <textarea placeholder="Comment..." ng-model="commentText"></textarea>
-                    <input ng-click="addCommentToPost(post.id, commentText)" type="button" value="Comment" />
+                    <input ng-click="addCommentToPost(post, commentText); show=!show; commentText=''" type="button" value="Comment" />
                 </div>
                 <div class="col-xs-10 comments">
                     <ul class="col-xs-12 post-comments">
                         <li class="col-xs-12" ng-repeat="comment in post.comments">
                             <div class="post-comment">
                                 <div ng-if="comment.author.profileImageData != null" class="comment-author-image">
-                                    <img ng-src="{{ comment.author.profileImageData }}" />
+                                    <img ng-src="{{ comment.author.profileImageData }}"/>
                                 </div>
                                 <div ng-if="comment.author.profileImageData == null" class="comment-author-image">
-                                    <img src="../images/no-image.png" />
+                                    <img src="../images/no-image.png"/>
                                 </div>
                                 <div class="comment-author-info">
                                     <span class="comment-author-name">{{ comment.author.name }}</span>
                                     <span class="comment-date">{{ comment.date | date : 'd MMM yyyy HH:mm:ss' : '+03' }}</span>
                                     <div class="edit-delete-comment-btns">
-                                        <input ng-click="$parent.commentDeleteMode=true" class="edit-delete-comment" ng-if="(post.author.username == myUsername || comment.author.username == myUsername) && !commentDeleteMode && !commentEditMode" type="button" value="Delete" />
-                                        <input ng-click="$parent.commentEditMode=true; $parent.commentText=comment.commentContent" class="edit-delete-comment" ng-if="comment.author.username == myUsername && !commentDeleteMode && !commentEditMode" type="button" value="Edit" />
-                                        <input disabled="disabled" class="edit-delete-comment" ng-if="(post.author.username == myUsername || comment.author.username == myUsername) && (commentDeleteMode || commentEditMode)" type="button" value="Delete" />
-                                        <input disabled="disabled" class="edit-delete-comment" ng-if="comment.author.username == myUsername && (commentDeleteMode || commentEditMode)" type="button" value="Edit" />
+                                        <input ng-click="$parent.commentDeleteMode=true" class="edit-delete-comment" ng-if="(post.author.username == myUsername || comment.author.username == myUsername) && !commentDeleteMode && !commentEditMode" type="button" value="Delete"/>
+                                        <input ng-click="$parent.commentEditMode=true; $parent.commentText=comment.commentContent" class="edit-delete-comment" ng-if="comment.author.username == myUsername && !commentDeleteMode && !commentEditMode" type="button" value="Edit"/>
+                                        <input disabled="disabled" class="edit-delete-comment" ng-if="(post.author.username == myUsername || comment.author.username == myUsername) && (commentDeleteMode || commentEditMode)" type="button" value="Delete"/>
+                                        <input disabled="disabled" class="edit-delete-comment" ng-if="comment.author.username == myUsername && (commentDeleteMode || commentEditMode)" type="button" value="Edit"/>
                                     </div>
                                 </div>
                                 <div class="comment-content">
@@ -90,28 +90,32 @@
                                         <textarea disabled placeholder="{{ comment.commentContent }}"></textarea>
                                         <div class="question">
                                             <span>Delete Comment?</span>
-                                            <input ng-click="deleteComment(post.id, comment.id)" type="button" value="Yes" />
-                                            <input ng-click="commentDeleteMode=false" type="button" value="No" />
+                                            <input ng-click="deleteComment(post, comment)" type="button" value="Yes"/>
+                                            <input ng-click="commentDeleteMode=false" type="button" value="No"/>
                                         </div>
                                     </div>
                                     <div ng-show="commentEditMode" class="col-xs-12 edit-comment">
                                         <textarea ng-model="commentText"></textarea>
                                         <div class="question">
                                             <span>Save Changes?</span>
-                                            <input ng-click="editComment(post.id, comment.id, commentText)" type="button" value="Yes" />
-                                            <input ng-click="commentEditMode=false" type="button" value="No" />
+                                            <input ng-click="editComment(post, comment, commentText); commentEditMode=false" type="button" value="Yes"/>
+                                            <input ng-click="commentEditMode=false" type="button" value="No"/>
                                         </div>
                                     </div>
                                 </div>
                                 <div class="comment-buttons">
                                     <span class="like-comment" ng-if="!comment.liked">{{ comment.likesCount }} <img src="../images/like_icon.png" /></span>
-                                    <span ng-click="likePostComment(post.id, comment.id)" ng-if="!comment.liked" class="like-unlike-comment">Like</span>
+                                    <span ng-click="likePostComment(post, comment)" ng-if="!comment.liked" class="like-unlike-comment">Like</span>
                                     <span class="like-comment" ng-if="comment.liked">{{ comment.likesCount }} <img src="../images/unlike_icon.png" /></span>
-                                    <span ng-click="unlikePostComment(post.id, comment.id)" ng-if="comment.liked" class="like-unlike-comment">Unlike</span>
+                                    <span ng-click="unlikePostComment(post, comment)" ng-if="comment.liked" class="like-unlike-comment">Unlike</span>
                                 </div>
                             </div>
                         </li>
                     </ul>
+                </div>
+                <div class="col-xs-12" ng-init="hideButton=true">
+                    <input ng-click="getAllPostComments(post)" ng-if="post.hidableComments == true" type="button" value="More" />
+                    <input ng-click="showLessComments(post)" ng-if="post.hidableComments == true" type="button" value="Less" />
                 </div>
             </li>
         </ul>
